# PolyBench-RAJA

./: .clang-format  .clang_complete  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.LLNL.txt  LICENSE.txt  Makefile  PolybenchRAJA.hpp  README.md  runall.sh  setup.sh
.travis/: config-intel-16.sh  install-intel-16.sh
common/ref/: 2mm.h  atax.c  bicg.c  deriche.c  doitgen.c  fdtd-2d.h  gemver.c  gesummv.c  ludcmp.h  mvt.h  polybench.c  syr2k.h  syrk.c  trisolv.h
datamining/correlation/: correlation.c  correlation.h
datamining/covariance/: covariance.c  covariance.h
include/: MultiDimArray.hpp  PolyBench.hpp  PolyBenchKernel.hpp  PolyBenchPreprocessor.hpp  PolyBenchRAJA.hpp  PolyBenchUtils.hpp  Timer.hpp  aligned_memory.hpp  hyper_array.hpp  jacobi-2d.hpp  polybench_raja.hpp  timer.hpp
include/Base/: 2mm.hpp  3mm.hpp  adi.hpp  atax.hpp  bicg.hpp  cholesky.hpp  correlation.hpp  covariance.hpp  deriche.hpp  doitgen.hpp  durbin.hpp  fdtd-2d.hpp  floyd-warshall.hpp  gemm.hpp  gemver.hpp  gesummv.hpp  gramschmidt.hpp  heat-3d.hpp  jacobi-1d.hpp  jacobi-2d.hpp  lu.hpp  ludcmp.hpp  mvt.hpp  nussinov.hpp  seidel-2d.hpp  symm.hpp  syr2k.hpp  syrk.hpp  trisolv.hpp  trmm.hpp
include/C++/: 2mm.hpp  3mm.hpp  adi.hpp  atax.hpp  bicg.hpp  cholesky.hpp  correlation.hpp  covariance.hpp  deriche.hpp  doitgen.hpp  durbin.hpp  fdtd-2d.hpp  floyd-warshall.hpp  gemm.hpp  (+16 more)
polybench-code/: CHANGELOG  ChangeLog-internal  README  THANKS
polybench-doc/: polybench.tex
reference/: 2mm.c  2mm.h  3mm.c  3mm.h  adi.c  adi.h  atax.c  atax.h  bicg.c  bicg.h  cholesky.c  cholesky.h  correlation.c  correlation.h  covariance.c  covariance.h  deriche.c  deriche.h  doitgen.c  doitgen.h  durbin.c  durbin.h  fdtd-2d.c  fdtd-2d.h  floyd-warshall.c  floyd-warshall.h  gemm.c  gemm.h  gemver.c  gemver.h  gesummv.c  gesummv.h  gramschmidt.c  gramschmidt.h  heat-3d.c  heat-3d.h  jacobi-1d.c  jacobi-1d.h  jacobi-2d.c  jacobi-2d.h  (+22 more)
scripts/: clang-3.7.0.sh  clang.sh  gcc-4.9.3.sh  gcc.sh  icpc-16.0.109.sh  icpc.sh  nvcc_gcc-4.9.3.sh  nvcc_gcc.sh
src/: 2mm.cpp  3mm.cpp  AlignedMemory.cpp  PolyBenchKernel.cpp  adi.cpp  aligned_memory.cpp  atax.cpp  bicg.cpp  cholesky.cpp  correlation.cpp  covariance.cpp  deriche.cpp  doitgen.cpp  durbin.cpp  fdtd-2d.cpp  floyd-warshall.cpp  gemm.cpp  gemver.cpp  gesummv.cpp  gramschmidt.cpp  heat-3d.cpp  jacobi-1d.cpp  jacobi-2d.cpp  lu.cpp  ludcmp.cpp  mvt.cpp  nussinov.cpp  polybench_raja.cpp  seidel-2d.cpp  symm.cpp  syr2k.cpp  syrk.cpp  trisolv.cpp  trmm.cpp
trunk/: deploy.pl
utilities/: polybench.c  polybench.h  run_all_benchmarks.sh  template-for-new-benchmark.c
(+355 files in other folders)
